fix: update header layout to use space-around for better alignment

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,7 @@ footer {
 header {
     top: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem;
     height: 6rem;
